# coworker

./: .env.example  .gitignore  README.md  coworker.py  main.py  pyproject.toml  test.py
tools/: feedback.csv  feedback.py  internal.py  linear.py  notion.py  slack.py  utils.py
